# pyquda-agent

./: AGENTS.md  README.md  pyproject.toml
data/: backend_execution.json  backend_parity.json  codex_test_schema.json  goal_audit.json  pyquda_index.json  pyquda_runtime_check.json  run_pion_api_probe.json  runtime_candidates.json  v11_task_suite.json  v12_execution_readiness.json  v13_codex_runtime_readiness.json  v9_product_behavior.json
docs/: CONVENTIONS.md  FIRST_WORKFLOW_AUDIT.md  INTENT_LAYER_REFACTOR.md  PYQUDA_ARCHITECTURE.md  PYQUDA_RUNTIME_BOOTSTRAP.md  RESULT_SUMMARY_EXAMPLES.md  RESULT_SUMMARY_STATUS_MAPPING.md  RESULT_SUMMARY_TAXONOMY.md  RUNNABLE_APE_SMEAR_SPEC.md  RUNNABLE_GAUSSIAN_SHELL_QUARK_PROPAGATOR_SPEC.md  RUNNABLE_HYP_SMEAR_SPEC.md  RUNNABLE_MESON_SPEC_SPEC.md  RUNNABLE_PION_2PT_SPEC.md  RUNNABLE_PION_DISPERSION_SPEC.md  RUNNABLE_PION_PCAC_SPEC.md  RUNNABLE_PROTON_2PT_SPEC.md  RUNNABLE_QUARK_PROPAGATOR_SPEC.md  RUNNABLE_RHO_VECTOR_SPEC.md  RUNNABLE_STOUT_SMEAR_SPEC.md  RUNNABLE_WILSON_FLOW_SPEC.md  RUN_WORKFLOW.md  TASK_SCHEMAS.md  V6_DESIGN_NOTE.md
outputs/: audit_meson.physics.json  audit_meson.plan.json  audit_meson.task.json  audit_pion.physics.json  audit_pion.plan.json  audit_pion.task.json  audit_proton.physics.json  audit_proton.plan.json  audit_proton.task.json  backend_probe_codex.physics.json  backend_probe_codex.plan.json  backend_probe_codex.session.json  backend_probe_codex.task.json  debug_dispersion.physics.json  debug_dispersion.plan.json  debug_dispersion.task.json  demo_v3_pion.physics.json  demo_v3_pion.plan.json  (+455 more)
(+155 files in other folders)
