[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquda-agent"
version = "0.1.0"
description = "CLI-first helper for indexing PyQUDA and generating PyQUDA workflow scripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pyquda-agent = "pyquda_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
